--- a/Movies/Movie Data Analysis.ipynb
+++ b/Movies/Movie Data Analysis.ipynb
@@ -39,10 +39,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40c04a04",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "* [Section 1: Dataset sources](#bullet1)\n",
+    "* [Section 2: Early-stage data observations](#bullet2)\n",
+    "* [Section 3: Data Analysis (Part 1)](#bullet3)\n",
+    "* [Section 4: Data Analysis (Part 2)](#bullet4)\n",
+    "* [Section 5: Data Analysis (Part 3)](#bullet5)\n",
+    "* [Section 6: Data Analysis (Part 4)](#bullet6)\n",
+    "* [Section 7: Data Analysis (Part 5)](#bullet7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab7caaa2",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 1</b>: Dataset sources</a>"
+    "### <a class=\"anchor\" id=\"bullet1\"><b>Section 1</b>: Dataset sources</a>"
    ]
   },
   {
@@ -80,7 +95,7 @@
    "id": "ab00e22b",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 2</b>: Early-stage data observations</a>"
+    "### <a class=\"anchor\" id=\"bullet2\"><b>Section 2</b>: Early-stage data observations</a>"
    ]
   },
   {
@@ -285,7 +300,7 @@
    "id": "9e9dc553",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 3</b>: Data Analysis (Part 1)</a>"
+    "### <a class=\"anchor\" id=\"bullet3\"><b>Section 3</b>: Data Analysis (Part 1)</a>"
    ]
   },
   {
@@ -561,7 +576,7 @@
    "id": "f3a9a740",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 4</b>: Data Analysis (Part 2)</a>"
+    "### <a class=\"anchor\" id=\"bullet4\"><b>Section 4</b>: Data Analysis (Part 2)</a>"
    ]
   },
   {
@@ -1005,7 +1020,7 @@
    "id": "b632df0e",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 5</b>: Data Analysis (Part 3)</a>"
+    "### <a class=\"anchor\" id=\"bullet5\"><b>Section 5</b>: Data Analysis (Part 3)</a>"
    ]
   },
   {
@@ -17560,7 +17575,7 @@
    "id": "93303904",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 6</b>: Data Analysis (Part 4)</a>"
+    "### <a class=\"anchor\" id=\"bullet6\"><b>Section 6</b>: Data Analysis (Part 4)</a>"
    ]
   },
   {
@@ -17821,7 +17836,7 @@
    "id": "6f8a77d4",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"\"><b>Section 7</b>: Data Analysis (Part 5)</a>"
+    "### <a class=\"anchor\" id=\"bullet7\"><b>Section 7</b>: Data Analysis (Part 5)</a>"
    ]
   },
   {
