--- a/Innovative Misbehavior Research Ideas.ipynb
+++ b/Innovative Misbehavior Research Ideas.ipynb
@@ -26,7 +26,7 @@
    "id": "5114f58c",
    "metadata": {},
    "source": [
-    "<i>The original research's second featuring method selected distinct features from the Recursive Feature Elimination (RFE) implementation. This notebook includes misbehavior classification by using these distinct features.</i>"
+    "<i>This notebook includes summaries of some research methods and ideas, with three categories: parameter-related researches, research publication reading, and diverse calculation and processing techniques. Their common goal is to find optimized performance of misbehavior classification models.</i>"
    ]
   },
   {
@@ -52,7 +52,13 @@
    "source": [
     "<b>Idea 2</b>: Brute force method: checking each parameter group's performance independently\n",
     "\n",
-    "Below here is a list of parameters that will affect "
+    "Parameters that will affect <u><i>Logistic Regression</i></u> performance: 'C' and 'solver'\n",
+    "\n",
+    "Parameters that will affect <u><i>KNN</i></u> performance: 'n_neighbors', 'weights', 'algorithm', 'leaf_size', 'metric', 'p', and 'metric_params'\n",
+    "\n",
+    "Parameters that will affect <u><i>Random Forest</i></u> performance: 'n_estimators', 'criterion', 'max_depth', 'min_samples_split', 'min_samples_leaf', 'max_features', 'bootstrap', 'random_state', 'class_weight', 'n_jobs'\n",
+    "\n",
+    "Parameters that will affect <u><i>Decision Tree</i></u> performance:"
    ]
   },
   {
@@ -60,7 +66,11 @@
    "id": "f032e66b",
    "metadata": {},
    "source": [
-    "<b>Idea 3</b>: Adjusting training and testing data ratios"
+    "<b>Idea 3</b>: Adjusting training and testing data ratios\n",
+    "\n",
+    "<b>Normal Training Data : Testing Data Ratio</b>: 80% Training Data versus 20% Testing Data -> Default\n",
+    "\n",
+    "To find an optimal balance between training data and testing data, I use "
    ]
   },
   {
