--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -63,7 +63,7 @@
    "id": "e6d9fd96",
    "metadata": {},
    "source": [
-    "There are 24 features selected: `posx`, `posy`, `posz', 'posx_n`, `posy_n`, `posz_n`, `spdx`, `spdy`, `spdz`, `spdx_n`, `spdy_n`, `spdz_n`, `aclx`, `acly`, `aclz`, `aclx_n`, `acly_n`, `aclz_n`,\n",
+    "There are 24 features selected: `posx`, `posy`, `posz`, `posx_n`, `posy_n`, `posz_n`, `spdx`, `spdy`, `spdz`, `spdx_n`, `spdy_n`, `spdz_n`, `aclx`, `acly`, `aclz`, `aclx_n`, `acly_n`, `aclz_n`,\n",
     "`hedx`, `hedy`, `hedz`, `hedx_n`, `hedy_n`, `hedz_n`"
    ]
   },
