--- a/Third Method Neural Network Implementations.ipynb
+++ b/Third Method Neural Network Implementations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1bad3b97",
+   "id": "f8658571",
    "metadata": {},
    "source": [
     "# Third Method Neural Network Implementations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3343bd",
+   "id": "d6cfb1fd",
    "metadata": {},
    "source": [
     "<p><b>Author</b>: Jingze Dai</p>\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde15168",
+   "id": "f3259fc7",
    "metadata": {},
    "source": [
     "<i>The original research's third featuring method with its corresponding ANN, CNN, and LSTM implementations.</i>"
@@ -31,16 +31,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b2757d",
+   "id": "59329c21",
    "metadata": {},
    "source": [
     "<i>Your Feedback is important for Jingze's further development. If you want to give feedback and suggestions, or you want to participate in working and learning together, please email Jingze at dai.jingze@icloud.com. If you want Jingze to provide contributions to your research or opensource project or you want Jingze to help you with any programming issues, please email Jingze at david1147062956@gmail.com. Thank you for your help.</i>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b953d49e",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "* [Section 1: Selected Features](#bullet1)\n",
+    "* [Section 2: Extract and Load Datasets](#bullet2)\n",
+    "* [Section 3: Classification (Binary Classification Approach (BCA))](#bullet3)\n",
+    "* [Section 4: Classification (A Multi-class Classification Approach for Three Classes (MCATC))](#bullet4)\n",
+    "* [Section 5: Classification (A Classic Learning Approach for Multi-class classification (C-LAMC))](#bullet5)\n",
+    "* [Section 6: Improvement Works on C-LAMC Classifications](#bullet6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df0603dc",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet1\"><p><b>Section 1</b>: Selected Features</p></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4618d561",
+   "metadata": {},
+   "source": [
+    "There are 12 features selected: `posx`, `posy`, `spdx`, `spdy`, `spdx_n`, `spdy_n`, `aclx`, `acly`, `hedx`, `hedy`,`hedx_n`, and `hedy_n`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743a0df6",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet2\"><p><b>Section 2</b>: Extract and Load Datasets</p></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c946d719",
+   "id": "244356c1",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5ca068b5",
+   "id": "28165c09",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b4dc022",
+   "id": "72943321",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2d3413f",
+   "id": "11384b51",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7fcdf5e9",
+   "id": "a7ab1612",
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "632f4590",
+   "execution_count": 5,
+   "id": "e32cdabb",
    "metadata": {},
    "outputs": [
     {
@@ -268,9 +306,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a61f0cd",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet3\"><p><b>Section 3</b>: Classification (Binary Classification Approach (BCA))</p></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5c0f1726",
+   "id": "c915a327",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a6c81c14",
+   "id": "d6a7ebab",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cd776a9b",
+   "id": "1f84a72f",
    "metadata": {},
    "outputs": [
     {
@@ -484,9 +530,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "871d2f52",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet4\"><p><b>Section 4</b>: Classification (A Multi-class Classification Approach for Three Classes (MCATC))</p></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f8270a1a",
+   "id": "cf270a14",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d285e7d5",
+   "id": "845bcf37",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "456a6988",
+   "id": "d30603df",
    "metadata": {},
    "outputs": [
     {
@@ -767,9 +821,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "916589df",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet5\"><p><b>Section 5</b>: Classification (A Classic Learning Approach for Multi-class classification (C-LAMC))</p></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a74ad1b7",
+   "id": "ccdb9194",
    "metadata": {},
    "outputs": [
     {
@@ -852,18 +914,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e19ffb4",
+   "metadata": {},
+   "source": [
+    "Here is an early-stage improved version of the ANN network above, which adds more layers. The accuracy has been increased a lot without considering the instability problem. -> That is, abnormal values of the statistics `loss` and `val_loss`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a6312ff6",
+   "execution_count": 6,
+   "id": "57046476",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -876,9 +939,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m84s\u001b[0m 1ms/step - accuracy: 0.0139 - loss: -377139232768000.0000 - val_accuracy: 0.0137 - val_loss: -7907536766238720.0000\n",
+      "Epoch 1/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m125s\u001b[0m 2ms/step - accuracy: 0.0138 - loss: -3792197187379658752.0000 - val_accuracy: 0.0137 - val_loss: -109648269314380267520.0000\n",
       "Epoch 2/10\n",
-      "\u001b[1m 7271/63897\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:03\u001b[0m 1ms/step - accuracy: 0.0133 - loss: -8805897895673856.0000"
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m114s\u001b[0m 2ms/step - accuracy: 0.0137 - loss: -390503464514598469632.0000 - val_accuracy: 0.0137 - val_loss: -2584283122725455659008.0000\n",
+      "Epoch 3/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m121s\u001b[0m 2ms/step - accuracy: 0.0137 - loss: -4888723260655223701504.0000 - val_accuracy: 0.0137 - val_loss: -17266669241049381076992.0000\n",
+      "Epoch 4/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 2ms/step - accuracy: 0.2669 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 5/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m114s\u001b[0m 2ms/step - accuracy: 0.5946 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 6/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 2ms/step - accuracy: 0.5953 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 7/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m122s\u001b[0m 2ms/step - accuracy: 0.5950 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 8/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m121s\u001b[0m 2ms/step - accuracy: 0.5947 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 9/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m119s\u001b[0m 2ms/step - accuracy: 0.5950 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "Epoch 10/10\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m118s\u001b[0m 2ms/step - accuracy: 0.5945 - loss: nan - val_accuracy: 0.5952 - val_loss: nan\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m19s\u001b[0m 964us/step\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 1ms/step - accuracy: 0.5937 - loss: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANN Accuracy: 0.594205915927887\n",
+      "ANN Precision: 0.35308066968094687\n",
+      "ANN Recall: 0.5942059152187454\n",
+      "ANN F1-score: 0.44295491104422313\n"
      ]
     }
    ],
@@ -891,7 +991,6 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "\n",
-    "# Assuming 'df' is your DataFrame\n",
     "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
     "X = df[features]\n",
     "Y = df['class'].astype(int)\n",
@@ -899,10 +998,11 @@
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
     "\n",
     "model = Sequential([\n",
-    "    Dense(128, input_shape=(len(features),), activation='relu'),  # Increased neurons\n",
-    "    Dropout(0.2),  # Dropout layer to prevent overfitting\n",
-    "    Dense(64, activation='relu'),  # Additional layer\n",
-    "    Dense(32, activation='relu'),  # Original layer\n",
+    "    Dense(256, input_shape=(len(features),), activation='relu'),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(32, activation='relu'),\n",
     "    Dense(1, activation='sigmoid')\n",
     "])\n",
     "\n",
@@ -931,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b0afc297",
+   "id": "635494ea",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7e6f3c5c",
+   "id": "2da87f03",
    "metadata": {},
    "outputs": [
     {
@@ -1103,9 +1203,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "207cc8c8",
+   "metadata": {},
+   "source": [
+    "Unlike previous version, this timw we can see that almost all neural networks have abnormal `loss` and `val_loss` values. Obviously, these extremely large negative values for `loss` and `val_loss` indicate a severe numerical instability problem. (Bad news) Simultaneously, I observe that by inserting new neural network layers, the classification accuracy can be considerably improved. (Good news)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f58a64",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet6\"><p><b>Section 6</b>: Improvement Works on C-LAMC Classifications</p></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e29c11c",
+   "id": "d044314e",
    "metadata": {},
    "outputs": [],
    "source": []
