--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c1b42c46",
    "metadata": {},
    "outputs": [
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "de2308fc",
    "metadata": {},
    "outputs": [
@@ -2494,7 +2494,7 @@
    "source": [
     "<p>At first we need to divide dataset into training data and testing data. This is completed on each algorithm's implementation. </p>\n",
     "<p>80% data is training data, while 20% remaining is testing data. (This is normal setting). However, in order to improve accuracy, some models' training-testing data ratio s are customized.</p>\n",
-    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook \"Third Method Neural Network Implementations.ipynb\" (not included in this notebook).</b>"
+    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook <u>\"Third Method Neural Network Implementations.ipynb\"</u> (not included here, find this file in the same directory).</b>"
    ]
   },
   {
@@ -2728,7 +2728,7 @@
     "    'n_neighbors': randint(1, 11),\n",
     "    'weights': ['uniform', 'distance'],\n",
     "    'algorithm': ['auto', 'ball_tree', 'kd_tree', 'brute'],\n",
-    "    'leaf_size': randint(20, 50),\n",
+    "    'leaf_size': randint(25, 50),\n",
     "}\n",
     "\n",
     "knn = KNeighborsClassifier()\n",
@@ -2973,7 +2973,7 @@
     "### <a class=\"anchor\" id=\"bullet5-2\"><b>Section 5.2</b>: Classification (A Multi-class Classification Approach for Three Classes (MCATC))</a>\n",
     "\n",
     "<p>In this section, the classification requirement becomes more rigid: classifying all 20 autonomous driving behavior categories with three categories: normal behaviors, failues, and attacks.</p>\n",
-    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook \"Third Method Neural Network Implementations.ipynb\" (not included in this notebook).</b>"
+    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook <u>\"Third Method Neural Network Implementations.ipynb\"</u> (not included here, find this file in the same directory).</b>"
    ]
   },
   {
@@ -3377,15 +3377,26 @@
    "source": [
     "### <a class=\"anchor\" id=\"bullet5-3\"><b>Section 5.3</b>: Classification (A Classic Learning Approach for Multi-class classification (C-LAMC))</a>\n",
     "<p>From section 5.2, the classification requirement becomes more rigid: classifying all 20 autonomous driving behavior categories individually.</p>\n",
-    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook \"Third Method Neural Network Implementations.ipynb\" (not included in this notebook).</b>"
+    "<b>Notice: ANN, CNN, and LSTM implementations are on a separate notebook <u>\"Third Method Neural Network Implementations.ipynb\"</u> (not included here, find this file in the same directory).</b>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f4e4172e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.6344414847831327\n",
+      "Logistic Regression Precision: 0.6344414847831327\n",
+      "Logistic Regression Recall: 0.6344414847831327\n",
+      "Logistic Regression F1-score: 0.6344414847831327\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "import pandas as pd\n",
@@ -3422,17 +3433,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "738c124f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 1 : 0.7322313377008335\n",
+      "KNN Precision: 0.7436785051096729\n",
+      "KNN Recall: 0.7322313377008335\n",
+      "KNN F1-score: 0.7366468354220451\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 2 : 0.7704605281691242\n",
+      "KNN Precision: 0.7475046182635735\n",
+      "KNN Recall: 0.7704605281691242\n",
+      "KNN F1-score: 0.7512363968990194\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 3 : 0.761569545606781\n",
+      "KNN Precision: 0.7470172448394834\n",
+      "KNN Recall: 0.761569545606781\n",
+      "KNN F1-score: 0.7498129283349223\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 4 : 0.7663773432535894\n",
+      "KNN Precision: 0.7434012920350344\n",
+      "KNN Recall: 0.7663773432535894\n",
+      "KNN F1-score: 0.7475910810757723\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 5 : 0.7592376385450152\n",
+      "KNN Precision: 0.736476982590807\n",
+      "KNN Recall: 0.7592376385450152\n",
+      "KNN F1-score: 0.7408182090161983\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 6 : 0.7553735589909885\n",
+      "KNN Precision: 0.7249944016236805\n",
+      "KNN Recall: 0.7553735589909885\n",
+      "KNN F1-score: 0.7295217899426095\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 7 : 0.7500367783999674\n",
+      "KNN Precision: 0.7180533110673323\n",
+      "KNN Recall: 0.7500367783999674\n",
+      "KNN F1-score: 0.7231812252514361\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 8 : 0.7542764671451511\n",
+      "KNN Precision: 0.7193315937660962\n",
+      "KNN Recall: 0.7542764671451511\n",
+      "KNN F1-score: 0.7219973277211644\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 9 : 0.7540198008645271\n",
+      "KNN Precision: 0.7193941607370556\n",
+      "KNN Recall: 0.7540198008645271\n",
+      "KNN F1-score: 0.7202180946772322\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 10 : 0.7540636219368287\n",
+      "KNN Precision: 0.7190189381055843\n",
+      "KNN Recall: 0.7540636219368287\n",
+      "KNN F1-score: 0.7172663228032942\n",
+      "*********\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
     "X = df[features]\n",
@@ -3462,10 +3529,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5c1a564a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.8264544683408404\n",
+      "Random Forest Precision: 0.8203597379628255\n",
+      "Random Forest Recall: 0.8264544683408404\n",
+      "Random Forest F1-score: 0.8195545794290235\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -3497,10 +3575,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "21f95b51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.7847289823181973\n",
+      "Decision Tree Precision: 0.790760663964826\n",
+      "Decision Tree Recall: 0.7847289823181973\n",
+      "Decision Tree F1-score: 0.7869574923559319\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
