--- a/Classification based on the Second Original Featuring Result.ipynb
+++ b/Classification based on the Second Original Featuring Result.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "73c851ff",
    "metadata": {},
    "outputs": [
@@ -993,8 +993,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "619515a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.6687314738591653\n",
+      "Logistic Regression Precision: 0.6374461945250697\n",
+      "Logistic Regression Recall: 0.6687314738591653\n",
+      "Logistic Regression F1-score: 0.5787906916350495\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "\n",
+    "X = df[features].values\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "\n",
+    "lr.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = lr.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy)\n",
+    "print(\"Logistic Regression Precision:\", precision)\n",
+    "print(\"Logistic Regression Recall:\", recall)\n",
+    "print(\"Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df531755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 1 : 0.8027159674597237\n",
+      "KNN Precision: 0.8066590359961757\n",
+      "KNN Recall: 0.8027159674597237\n",
+      "KNN F1-score: 0.804227308527448\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 2 : 0.8293560493425274\n",
+      "KNN Precision: 0.8267237731004661\n",
+      "KNN Recall: 0.8293560493425274\n",
+      "KNN F1-score: 0.8231326044770159\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 3 : 0.824667194606252\n",
+      "KNN Precision: 0.822739680871316\n",
+      "KNN Recall: 0.824667194606252\n",
+      "KNN F1-score: 0.8223984559151134\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 4 : 0.8278332670800455\n",
+      "KNN Precision: 0.8242200153592177\n",
+      "KNN Recall: 0.8278332670800455\n",
+      "KNN F1-score: 0.8218003239306294\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 5 : 0.8204494163972192\n",
+      "KNN Precision: 0.8173448159450895\n",
+      "KNN Recall: 0.8204494163972192\n",
+      "KNN F1-score: 0.8158442803840729\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 6 : 0.817145620553335\n",
+      "KNN Precision: 0.8142309332525839\n",
+      "KNN Recall: 0.817145620553335\n",
+      "KNN F1-score: 0.8089476523027588\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 7 : 0.8119590836387767\n",
+      "KNN Precision: 0.8088651237374546\n",
+      "KNN Recall: 0.8119590836387767\n",
+      "KNN F1-score: 0.804845653561703\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 8 : 0.8162081626137392\n",
+      "KNN Precision: 0.8150302463796603\n",
+      "KNN Recall: 0.8162081626137392\n",
+      "KNN F1-score: 0.8063203926445421\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 9 : 0.8137729630244052\n",
+      "KNN Precision: 0.8122217406761312\n",
+      "KNN Recall: 0.8137729630244052\n",
+      "KNN F1-score: 0.804486160644076\n",
+      "*********\n",
+      "KNN Accuracy when n_neighbors = 10 : 0.814222129015497\n",
+      "KNN Precision: 0.8142885276853077\n",
+      "KNN Recall: 0.814222129015497\n",
+      "KNN F1-score: 0.8031408706126074\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "def characterize_class(value):\n",
+    "    if value == 0:\n",
+    "        return 0\n",
+    "    elif value >= 1 and value <= 12:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'aclx_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].apply(characterize_class).astype(int).values\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "n_neighbor_amount = 1\n",
+    "\n",
+    "print(\"*********\")\n",
+    "while n_neighbor_amount < 11:\n",
+    "    knn = KNeighborsClassifier(n_neighbors=n_neighbor_amount)\n",
+    "    knn.fit(X_train, Y_train)\n",
+    "    Y_pred = knn.predict(X_test)\n",
+    "    accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "    print(\"KNN Accuracy when n_neighbors =\", n_neighbor_amount, \":\", accuracy)\n",
+    "    precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "    recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "    f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "    print(\"KNN Precision:\", precision)\n",
+    "    print(\"KNN Recall:\", recall)\n",
+    "    print(\"KNN F1-score:\", f1)\n",
+    "    print(\"*********\")\n",
+    "    n_neighbor_amount += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031651a2",
    "metadata": {},
    "outputs": [],
    "source": []
