--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6435b8d8",
+   "id": "afc13cf3",
    "metadata": {},
    "outputs": [
     {
@@ -1624,8 +1624,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a3e4ce6",
+   "execution_count": 6,
+   "id": "fa970208",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,46 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "\u001b[1m63896/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 13ms/step - accuracy: 0.7033 - loss: 0.7763"
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m899s\u001b[0m 14ms/step - accuracy: 0.7033 - loss: 0.7763 - val_accuracy: 0.7722 - val_loss: 0.6455 - learning_rate: 0.0010\n",
+      "Epoch 2/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m914s\u001b[0m 14ms/step - accuracy: 0.7765 - loss: 0.6411 - val_accuracy: 0.7893 - val_loss: 0.6124 - learning_rate: 0.0010\n",
+      "Epoch 3/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m976s\u001b[0m 15ms/step - accuracy: 0.7902 - loss: 0.6129 - val_accuracy: 0.7964 - val_loss: 0.5944 - learning_rate: 0.0010\n",
+      "Epoch 4/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m945s\u001b[0m 15ms/step - accuracy: 0.7951 - loss: 0.6020 - val_accuracy: 0.8001 - val_loss: 0.5860 - learning_rate: 0.0010\n",
+      "Epoch 5/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m681s\u001b[0m 11ms/step - accuracy: 0.7985 - loss: 0.5939 - val_accuracy: 0.8015 - val_loss: 0.5823 - learning_rate: 0.0010\n",
+      "Epoch 6/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m664s\u001b[0m 10ms/step - accuracy: 0.8009 - loss: 0.5880 - val_accuracy: 0.8041 - val_loss: 0.5761 - learning_rate: 0.0010\n",
+      "Epoch 7/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m659s\u001b[0m 10ms/step - accuracy: 0.8037 - loss: 0.5817 - val_accuracy: 0.8061 - val_loss: 0.5713 - learning_rate: 0.0010\n",
+      "Epoch 8/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m682s\u001b[0m 11ms/step - accuracy: 0.8049 - loss: 0.5782 - val_accuracy: 0.8076 - val_loss: 0.5690 - learning_rate: 0.0010\n",
+      "Epoch 9/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m630s\u001b[0m 10ms/step - accuracy: 0.8064 - loss: 0.5750 - val_accuracy: 0.8097 - val_loss: 0.5634 - learning_rate: 0.0010\n",
+      "Epoch 10/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31267s\u001b[0m 489ms/step - accuracy: 0.8079 - loss: 0.5714 - val_accuracy: 0.8110 - val_loss: 0.5608 - learning_rate: 0.0010\n",
+      "Epoch 11/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m675s\u001b[0m 11ms/step - accuracy: 0.8081 - loss: 0.5709 - val_accuracy: 0.7913 - val_loss: 0.6238 - learning_rate: 0.0010\n",
+      "Epoch 12/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1800s\u001b[0m 28ms/step - accuracy: 0.8085 - loss: 0.5697 - val_accuracy: 0.8120 - val_loss: 0.5577 - learning_rate: 0.0010\n",
+      "Epoch 13/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m632s\u001b[0m 10ms/step - accuracy: 0.8097 - loss: 0.5666 - val_accuracy: 0.8119 - val_loss: 0.5575 - learning_rate: 0.0010\n",
+      "Epoch 14/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m661s\u001b[0m 10ms/step - accuracy: 0.8105 - loss: 0.5652 - val_accuracy: 0.8118 - val_loss: 0.5577 - learning_rate: 0.0010\n",
+      "Epoch 15/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m653s\u001b[0m 10ms/step - accuracy: 0.8110 - loss: 0.5638 - val_accuracy: 0.8135 - val_loss: 0.5538 - learning_rate: 0.0010\n",
+      "Epoch 16/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m630s\u001b[0m 10ms/step - accuracy: 0.8116 - loss: 0.5625 - val_accuracy: 0.8134 - val_loss: 0.5545 - learning_rate: 0.0010\n",
+      "Epoch 17/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m625s\u001b[0m 10ms/step - accuracy: 0.8119 - loss: 0.5615 - val_accuracy: 0.8127 - val_loss: 0.5560 - learning_rate: 0.0010\n",
+      "Epoch 18/50\n",
+      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3987s\u001b[0m 62ms/step - accuracy: 0.8122 - loss: 0.5606 - val_accuracy: 0.8133 - val_loss: 0.5544 - learning_rate: 0.0010\n",
+      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m76s\u001b[0m 4ms/step\n",
+      "LSTM Accuracy: 0.8127760336295429\n",
+      "LSTM Precision: 0.8413630540543987\n",
+      "LSTM Recall: 0.8127760336295429\n",
+      "LSTM F1-score: 0.7951452302682248\n"
      ]
     }
    ],
@@ -1721,9 +1760,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "008c4152",
+   "metadata": {},
+   "source": [
+    "### <a class=\"anchor\" id=\"bullet5\"><p><b>Section 5</b>: Classification (A Classic Learning Approach for Multi-class classification (C-LAMC))</p></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bc06f85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.6411617592282484\n",
+      "Logistic Regression Precision: 0.4476159297939478\n",
+      "Logistic Regression Recall: 0.6411617592282484\n",
+      "Logistic Regression F1-score: 0.5134919074066548\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = df['class'].astype(int)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "\n",
+    "lr.fit(X_train, Y_train)\n",
+    "\n",
+    "Y_pred = lr.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy)\n",
+    "print(\"Logistic Regression Precision:\", precision)\n",
+    "print(\"Logistic Regression Recall:\", recall)\n",
+    "print(\"Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d559fe0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'n_neighbors': 10}\n",
+      "KNN Accuracy: 0.6633727827319934\n",
+      "KNN Precision: 0.6777900067387936\n",
+      "KNN Recall: 0.6633727827319934\n",
+      "KNN F1-score: 0.5569454259476793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.decomposition import PCA\n",
+    "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df.drop(columns=['class'])\n",
+    "Y = df['class'].astype(int)\n",
+    "\n",
+    "pca = PCA(n_components=10)\n",
+    "X_pca = pca.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_pca, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "param_grid = {'n_neighbors': range(1, 11)}\n",
+    "\n",
+    "grid_search = GridSearchCV(KNeighborsClassifier(), param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_search.fit(X_train, Y_train)\n",
+    "\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "\n",
+    "knn = grid_search.best_estimator_\n",
+    "\n",
+    "knn.fit(X_train, Y_train)\n",
+    "Y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred, average='weighted')\n",
+    "recall = recall_score(Y_test, Y_pred, average='weighted')\n",
+    "f1 = f1_score(Y_test, Y_pred, average='weighted')\n",
+    "\n",
+    "print(\"KNN Accuracy:\", accuracy)\n",
+    "print(\"KNN Precision:\", precision)\n",
+    "print(\"KNN Recall:\", recall)\n",
+    "print(\"KNN F1-score:\", f1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9705c4a6",
+   "id": "c57f6eea",
    "metadata": {},
    "outputs": [],
    "source": []
